--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         </script>
         <table>
             <div class="top_wrap">
-                <h1>청년 고용 올케어 플랫폼 구축 사업 TEST TEST</h1>
+                <h1>청년 고용 올케어 플랫폼 구축 사업</h1>
                 <div class="btn_box">
                     <a href="../allcare/pc/sample.html" target="_blank">PC 샘플 페이지</a>
-                    <a href="../allcare/mo/mo_sample.html" target="_blank">Mobile 샘플 페이지</a>
+                    <a href="../allcare/mobile/mo_sample.html" target="_blank">Mobile 샘플 페이지</a>
                 </div>
             </div>
             <caption style="font-size: 0;">청년 고용 올케어 플랫폼 구축 사업</caption>
