--- a/mo/mo_sample.html
+++ b/mo/mo_sample.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Mobile_Sample</title>
-        <script src="../mo/include/js/head.js"></script>
+        <script src="../mobile/include/js/head.js"></script>
 
-        <link rel="stylesheet" href="../mo/css/font.css">
-        <link rel="stylesheet" href="../mo/css/layout.css">
-        <link rel="stylesheet" href="../mo/css/style.css">
-        <link rel="stylesheet" href="../mo/css/common.css">
+        <link rel="stylesheet" href="../mobile/css/font.css">
+        <link rel="stylesheet" href="../mobile/css/layout.css">
+        <link rel="stylesheet" href="../mobile/css/style.css">
+        <link rel="stylesheet" href="../mobile/css/common.css">
     </head>
     <body>
         <div>
@@ -43,5 +43,5 @@
         </div>
         <div class="bottom_bar person"></div>
     </body>
-    <script src="../mo/js/include.js"></script>
+    <script src="../mobile/js/include.js"></script>
 </html>
