--- a/pc/운영대학 목록.html
+++ b/pc/운영대학 목록.html
@@ -173,6 +173,13 @@
 
 
 
+
+
+
+                            
+
+
+
                             <!-- 콘텐츠 타이틀 -->
                             <div class="sub_tl">
                                 <h2 class="h2_sb">졸업생 특화프로그램</h2>
@@ -181,45 +188,54 @@
                             <div class="tab_wrap bg_type" data-role="tab">
                                 <div class="wk_gsprog_uni">
                                     <div class="step_cont">
-                                        <ul>
-                                            <li><strong>참여 대상</strong> : 고등학교/대학교 졸업 예정자 및 졸업생</li>
-                                            <li><strong>사업 내용</strong> : 취업성공을 위한 취업지원 프로그램 운영 및 제공</li>
-                                            <li>
-                                                <strong>참여 방법</strong>
-                                                <ol>
-                                                    <li>
-                                                        <div class="tit_box"><p><span>01.</span> 졸업생 특화프로그램<br aria-hidden="true"> 운영 대학조회</p></div>
-                                                        <div class="dsc_box"><p>운영 대학 목록에서<br aria-hidden="true"> 참여할 대학의<br aria-hidden="true"> 참여신청 버튼을<br aria-hidden="true"> 클릭합니다.</p></div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="tit_box"><p><span>02.</span> 사업 참여신청서<br aria-hidden="true"> 작성 및 제출</p></div>
-                                                        <div class="dsc_box"> 
-                                                            <p>사업참여신청서를<br aria-hidden="true"> 작성하고 제출합니다.<br aria-hidden="true"> 신청서 승인 이후에<br aria-hidden="true"> 특화프로그램을<br aria-hidden="true"> 신청할 수 있습니다.</p>
-                                                            <button>나의 제출 현황 보기</button>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="tit_box"><p><span>03.</span> 특화프로그램<br aria-hidden="true"> 신청</p></div>
-                                                        <div class="dsc_box"> 
-                                                            <p>참여신청서가 승인된<br aria-hidden="true"> 대학의 프로그램을<br aria-hidden="true"> 조회하고<br aria-hidden="true"> 프로그램을 신청합니다.</p>
-                                                            <button>나의 신청 현황 보기</button>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="tit_box"><p><span>04.</span> 특화프로그램<br aria-hidden="true"> 참여 및 상담</p></div>
-                                                        <div class="dsc_box">
-                                                            <p>대상자로 선발되면<br aria-hidden="true"> 프로그램을 참여할 수<br aria-hidden="true"> 있습니다.</p>
-                                                            <button class="disable">나의 상담 내역 보기</button>
-                                                        </div>
-                                                    </li>
-                                                </ol>
-                                            </li>
-                                        </ul>
-                                        <p>&#x203B; [마이페이지 > 참여 프로그램 관리 > 졸업생 특화프로그램] 메뉴에서 참여 및 프로그램 신청을 할 수 있습니다.</p>
+                                        <h3 class="t2_sb m-b16">신청 및 참여 절차</h3>
+                                        <div class="step_cont_area">
+                                            <ol>
+                                                <li>
+                                                    <p><span>01.</span> 졸업생 특화프로그램<br aria-hidden="true"> 운영 대학조회</p>
+                                                    <p>검색 옵션에서 지역을<br aria-hidden="true"> 선택하거나 대학명을 입력 후<br aria-hidden="true"> 검색 버튼을 클릭합니다.</p>
+                                                </li>
+                                                <li>
+                                                    <p><span>02.</span> 사업 참여신청서<br aria-hidden="true"> 작성 및 제출</p>
+                                                    <p>참여신청서를 작성하고<br aria-hidden="true"> 제출하면, 참여신청서 승인 후<br aria-hidden="true"> 대학에서 운영하는 프로그램을<br aria-hidden="true"> 특화프로그램을<br aria-hidden="true"> 신청할 수 있습니다.</p>
+                                                </li>
+                                                <li>
+                                                    <p><span>03.</span> 특화프로그램<br aria-hidden="true"> 신청</p>
+                                                    <p>운영 프로그램을<br aria-hidden="true"> 조회하고 신청합니다.<br aria-hidden="true"> 참여신청서가 승인된<br aria-hidden="true"> 대학의 프로그램만<br aria-hidden="true"> 신청할 수 있습니다.</p>
+                                                </li>
+                                                <li>
+                                                    <p><span>04.</span> 특화프로그램<br aria-hidden="true"> 참여 및 상담</p>
+                                                    <p>대상자로 선발되면<br aria-hidden="true"> 프로그램에<br aria-hidden="true"> 참여할 수 있습니다.</p>
+                                                </li>
+                                            </ol>
+                                            <div class="step_btn_box">
+                                                <p id="statusNotice">희망하는 운영 프로그램이 여러 대학교에서 진행할 경우, 대학마다 각각 참여신청서를 제출하고 승인을 받아야 합니다.</p>                                   
+                                                <!-- 개발적용시에 아래 스크립트 보완/삭제/수정등이 필요함 -->
+                                                <button type="button" class="btn medium type01" aria-describedby="statusNotice" id="btnMyStatus">나의 참여 현황 보기</button>
+                                            </div>
+                                            <script>
+                                                document.querySelector('.step_btn_box #btnMyStatus').addEventListener('click', () => {
+                                                    const isLoggedIn = checkLoginStatus(); // 로그인 상태 확인
+
+                                                    if (!isLoggedIn) {
+                                                        alert('로그인 후 이용바랍니다.');
+                                                        window.location.href = 'https://www.work24.go.kr/cm/z/b/0210/openLginPage.do'; 
+                                                    return;
+                                                    }
+
+                                                    // 로그인된 경우 '참여신청서 관리' 페이지로 이동
+                                                    window.location.href = '/참여신청서 관리.html';
+                                                });
+
+                                                // 테스트용으로 비로그인 처리
+                                                function checkLoginStatus() {return false;}
+                                            </script>
+                                        </div>
                                     </div>
 
+
                                     <div class="uniporg_cont">
-                                        <h3 class="t2_sb">운영 대학 및 프로그램</h3>
+                                        <h3 class="t2_sb m-b16">운영 대학 및 프로그램</h3>
                                         <article class="box_form_content">
                                             <form id="searchFrm" name="searchFrm" action="jobPsyExamList.do" method="post" class="reset_area">
                                                 <input type="hidden" id="pageIndex" name="pageIndex" value="1">
@@ -371,7 +387,7 @@
                                                         <td>AAA 대학교</td>
                                                         <td>대구광역시 달서구 달구벌대로 1095(신당동) AAA 대학교</td>
                                                         <td>000-0000-0000</td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="AAA 대학교 운영 프로그램 상세보기">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="AAA 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
                                                         <td><button type="button" class="submit btnType_b1" aria-label="AAA 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
@@ -379,7 +395,7 @@
                                                         <td>BBB 대학교</td>
                                                         <td>서울특별시 광진구 능동로 209(군자동) BBB대학교</td>
                                                         <td></td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="BBB 대학교 운영 프로그램 상세보기">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="BBB 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
                                                         <td><button type="button" class="submit btnType_b1" aria-label="BBB 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
@@ -387,7 +403,7 @@
                                                         <td>CCC 대학교</td>
                                                         <td>서울특별시 노원구 공릉로 232(공릉동) CCC 대학교</td>
                                                         <td>000-0000-0000</td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="CCC 대학교 운영 프로그램 상세보기">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="CCC 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
                                                         <td><button type="button" class="submit btnType_b1" aria-label="CCC 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
@@ -395,7 +411,7 @@
                                                         <td>DDD 대학교</td>
                                                         <td>대구광역시 달서구 달구벌대로 1095(신당동) DDD 대학교</td>
                                                         <td></td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="DDD 대학교 운영 프로그램 상세보기">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="DDD 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
                                                         <td><button type="button" class="submit btnType_b1" aria-label="DDD 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
@@ -403,7 +419,7 @@
                                                         <td>EEE 대학교</td>
                                                         <td>서울특별시 광진구 능동로 209(군자동) EEE 대학교</td>
                                                         <td></td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="EEE 대학교 운영 프로그램 상세보기">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="EEE 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
                                                         <td><button type="button" class="submit btnType_b1" aria-label="EEE 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
@@ -411,7 +427,7 @@
                                                         <td>FFF 대학교</td>
                                                         <td>대구광역시 달서구 달구벌대로 1095(신당동) FFF 대학교</td>
                                                         <td>000-0000-0000</td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="FFF 대학교 운영 프로그램 상세보기">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="FFF 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
                                                         <td><button type="button" class="submit btnType_b1" aria-label="FFF 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
@@ -419,7 +435,7 @@
                                                         <td>GGG 대학교</td>
                                                         <td>서울특별시 광진구 능동로 209(군자동) GGG 대학교</td>
                                                         <td>000-0000-0000</td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="GGG 대학교 운영 프로그램 상세보기">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="GGG 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
                                                         <td><button type="button" class="submit btnType_b1" aria-label="GGG 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
@@ -427,7 +443,7 @@
                                                         <td>HHH 대학교</td>
                                                         <td>경기도 수원시 영통구 광교산로 154-42(이의동) HHH 대학교</td>
                                                         <td></td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="HHH 대학교 운영 프로그램 상세보기">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="HHH 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
                                                         <td><button type="button" class="submit btnType_b1" aria-label="HHH 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
@@ -435,7 +451,7 @@
                                                         <td>III 대학교</td>
                                                         <td>대구광역시 달서구 달구벌대로 1095(신당동) III 대학교</td>
                                                         <td>000-0000-0000</td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="III 대학교 운영 프로그램 상세보기">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="III 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
                                                         <td><button type="button" class="submit btnType_b1" aria-label="III 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
@@ -443,7 +459,7 @@
                                                         <td>JJJ 대학교</td>
                                                         <td>경기도 수원시 영통구 광교산로 154-42(이의동) JJJ 대학교</td>
                                                         <td>000-0000-0000</td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="JJJ 대학교 운영 프로그램 상세보기">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="JJJ 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
                                                         <td><button type="button" class="submit btnType_b1" aria-label="JJJ 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
 
@@ -456,10 +472,29 @@
                                             <div class="section_bottom"></div>
                                         </div>
                                     </div>
+
+                                    <!-- 개발적용시에 아래 스크립트 보완/삭제/수정등이 필요함 -->
                                     <div class="statusDesc_cont">
                                         <p id="statusDesc">나의 신청현황을 확인하실 수 있습니다.</p>
-                                        <button type="button" aria-describedby="statusDesc">나의 신청현황 보기</button>
+                                        <button type="button" aria-describedby="statusDesc" id="btnStatusDesc">나의 신청현황 보기</button>
                                     </div>
+                                    <script>
+                                        document.querySelector('.statusDesc_cont #btnStatusDesc').addEventListener('click', () => {
+                                            const isLoggedIn = checkLoginStatus(); // 로그인 상태 확인
+
+                                            if (!isLoggedIn) {
+                                                alert('로그인 후 이용바랍니다.');
+                                                window.location.href = 'https://www.work24.go.kr/cm/z/b/0210/openLginPage.do'; 
+                                            return;
+                                            }
+
+                                            // 로그인된 경우 '참여신청서 관리' 페이지로 이동
+                                            window.location.href = '/참여신청서.html';
+                                        });
+
+                                        // 테스트용으로 비로그인 처리
+                                        function checkLoginStatus() {return false;}
+                                    </script>
                                 </div>
                             </div>
                             <!-- 콘텐츠영역 끝 -->
