--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <td>운영대학 목록</td>
                     <td>UI_ADHPAaM01</td>
                     <td class="status">작업중</td>
-                    <td><a href="./pc/03_졸업생특화프로그램_운영대학조회.html" target="_blank">바로가기</a></td>
+                    <td><a href="./pc/운영대학목록.html" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
                     <td class="no"></td>
@@ -82,7 +82,7 @@
                     <td>운영대학 목록 - 프로그램 조회 팝업</td>
                     <td>UI_ADHPAaM02</td>
                     <td class="status"></td>
-                    <td><a href="" target="_blank">바로가기</a></td>
+                    <td><a href="./pc/운영대학목록_프로그램조회팝업.html" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
                     <td class="no"></td>
