--- a/pc/UI_ADHPAaM01.html
+++ b/pc/UI_ADHPAaM01.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>운영대학조회</title>
+        <title>운영대학 목록</title>
         <script src="../pc/include/js/head.js"></script>
 
         <link rel="stylesheet" href="../pc/css/font.css">
@@ -24,7 +24,7 @@
                 }
                 //웹품질진단팀 제공소스로 변경
                 $(function(){
-                    $("#skipnaviCont").on("click", function(event) {
+                    $("#skipnaviPCont").on("click", function(event) {
                         event.preventDefault();
                         var scrollTop = $(window).scrollTop();
                         $(".cont_wrap").attr("tabindex", "-1").focus().removeAttr("tabindex");
@@ -370,7 +370,7 @@
                                                         <td>AAA 대학교</td>
                                                         <td>대구광역시 달서구 달구벌대로 1095(신당동) AAA 대학교</td>
                                                         <td>000-0000-0000</td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="AAA 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="AAA 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
                                                         <!-- 개발적용시 버튼 구현필요 -->
                                                         <td><button type="button" class="btnType_b1" aria-label="AAA 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
@@ -379,7 +379,7 @@
                                                         <td>BBB 대학교</td>
                                                         <td>서울특별시 광진구 능동로 209(군자동) BBB대학교</td>
                                                         <td></td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="BBB 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="BBB 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
                                                         <!-- 개발적용시 버튼 구현필요 -->
 
                                                         <td><button type="button" class="btnType_b1" aria-label="BBB 대학교 프로그램 신청하기">신청하기</button></td>
@@ -389,7 +389,7 @@
                                                         <td>CCC 대학교</td>
                                                         <td>서울특별시 노원구 공릉로 232(공릉동) CCC 대학교</td>
                                                         <td>000-0000-0000</td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="CCC 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="CCC 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
                                                         <!-- 개발적용시 버튼 구현필요 -->
 
                                                         <td><button type="button" class="btnType_b1" aria-label="CCC 대학교 프로그램 신청하기">신청하기</button></td>
@@ -399,7 +399,7 @@
                                                         <td>DDD 대학교</td>
                                                         <td>대구광역시 달서구 달구벌대로 1095(신당동) DDD 대학교</td>
                                                         <td></td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="DDD 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="DDD 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
                                                         <!-- 개발적용시 버튼 구현필요 -->
 
                                                         <td><button type="button" class="btnType_b1" aria-label="DDD 대학교 프로그램 신청하기">신청하기</button></td>
@@ -409,7 +409,7 @@
                                                         <td>EEE 대학교</td>
                                                         <td>서울특별시 광진구 능동로 209(군자동) EEE 대학교</td>
                                                         <td></td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="EEE 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="EEE 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
                                                         <!-- 개발적용시 버튼 구현필요 -->
 
                                                         <td><button type="button" class="btnType_b1" aria-label="EEE 대학교 프로그램 신청하기">신청하기</button></td>
@@ -419,7 +419,7 @@
                                                         <td>FFF 대학교</td>
                                                         <td>대구광역시 달서구 달구벌대로 1095(신당동) FFF 대학교</td>
                                                         <td>000-0000-0000</td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="FFF 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="FFF 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
                                                         <!-- 개발적용시 버튼 구현필요 -->
 
                                                         <td><button type="button" class="btnType_b1" aria-label="FFF 대학교 프로그램 신청하기">신청하기</button></td>
@@ -429,7 +429,7 @@
                                                         <td>GGG 대학교</td>
                                                         <td>서울특별시 광진구 능동로 209(군자동) GGG 대학교</td>
                                                         <td>000-0000-0000</td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="GGG 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="GGG 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
                                                         <!-- 개발적용시 버튼 구현필요 -->
 
                                                         <td><button type="button" class="btnType_b1" aria-label="GGG 대학교 프로그램 신청하기">신청하기</button></td>
@@ -439,7 +439,7 @@
                                                         <td>HHH 대학교</td>
                                                         <td>경기도 수원시 영통구 광교산로 154-42(이의동) HHH 대학교</td>
                                                         <td></td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="HHH 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="HHH 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
                                                         <!-- 개발적용시 버튼 구현필요 -->
 
                                                         <td><button type="button" class="btnType_b1" aria-label="HHH 대학교 프로그램 신청하기">신청하기</button></td>
@@ -449,7 +449,7 @@
                                                         <td>III 대학교</td>
                                                         <td>대구광역시 달서구 달구벌대로 1095(신당동) III 대학교</td>
                                                         <td>000-0000-0000</td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="III 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="III 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
                                                         <!-- 개발적용시 버튼 구현필요 -->
 
                                                         <td><button type="button" class="btnType_b1" aria-label="III 대학교 프로그램 신청하기">신청하기</button></td>
@@ -459,7 +459,7 @@
                                                         <td>JJJ 대학교</td>
                                                         <td>경기도 수원시 영통구 광교산로 154-42(이의동) JJJ 대학교</td>
                                                         <td>000-0000-0000</td>
-                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="JJJ 대학교 운영 프로그램 상세보기" onclick="location.href='./운영대학목록_프로그램조회팝업.html'">보기</button></td>
+                                                        <td><button type="button" class="linkPop btnType_b1" aria-label="JJJ 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
                                                         <!-- 개발적용시 버튼 구현필요 -->
                                                         <td><button type="button" class="btnType_b1" aria-label="JJJ 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
