--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <td></td>
                     <td>운영대학 목록 - 프로그램 조회 팝업</td>
                     <td>UI_ADHPAaM02</td>
-                    <td class="status"></td>
+                    <td class="status">작업중</td>
                     <td><a href="./pc/UI_ADHPAaM02.html" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
