--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>INDEX</title>
-        <link rel="stylesheet" href="/allcare/pc/css/reset.css">
-        <link rel="stylesheet" href="/allcare/pc/css/font.css">
+        <link rel="stylesheet" href="./pc/include/css/reset.css">
+        <link rel="stylesheet" href="./pc/css/font.css">
     </head>
     <body>
         <style>
             body {margin: 1rem;}
-            caption {font-size: 2rem; font-weight: 700;}
+            h1 {font-size: 2rem; font-weight: 700;}
             table {width: 100%; border-collapse: collapse;}
             th {border: 1px solid #555; background-color: #333; padding: 8px; text-align: center; color: #fff;}
             td {border: 1px solid #ccc; padding: 8px; text-align: left; color: #333; font-weight: 500; word-break: keep-all;}
@@ -18,9 +18,9 @@
             tbody tr:hover td {background-color: #fff6cd;}
             a {color: blue; text-decoration: underline;}
             a:hover {color: #ff0000;}
-            th:nth-child(1) {width: 30px;}
-            th:nth-child(n+8):nth-child(-n+11) {width: 120px;}
-            td:nth-child(1), td:nth-child(n+9):nth-child(-n+11) {text-align: center;}
+            th:nth-child(1) {width: 45px;}
+            th:nth-child(n+8):nth-child(-n+11) {width: 140px;}
+            td:nth-child(1), td:nth-child(n+8):nth-child(-n+11) {text-align: center;}
             .top_wrap {display: flex; justify-content: space-between; align-items: center;}
             h1 {margin: 1rem 0 0.5rem;}
             .btn_box {display: flex; justify-content: flex-end; align-items: center;}
@@ -40,8 +40,8 @@
             <div class="top_wrap">
                 <h1>청년 고용 올케어 플랫폼 구축 사업</h1>
                 <div class="btn_box">
-                    <a href="../allcare/pc/sample.html" target="_blank">PC 샘플 페이지</a>
-                    <a href="../allcare/mobile/mo_sample.html" target="_blank">Mobile 샘플 페이지</a>
+                    <a href="./pc/sample.html" target="_blank">PC 샘플 페이지</a>
+                    <a href="./mobile/mo_sample.html" target="_blank">Mobile 샘플 페이지</a>
                 </div>
             </div>
             <caption style="font-size: 0;">청년 고용 올케어 플랫폼 구축 사업</caption>
@@ -81,7 +81,7 @@
                     <td></td>
                     <td>운영대학 목록 - 프로그램 조회 팝업</td>
                     <td>UI_ADHPAaM02</td>
-                    <td class="status">작업중</td>
+                    <td class="status"></td>
                     <td><a href="./pc/UI_ADHPAaM02.html" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
