--- a/pc/UI_ADHPAaM01.html
+++ b/pc/UI_ADHPAaM01.html
@@ -226,7 +226,7 @@
                                                         <col>
                                                     </colgroup>
                                                     <tbody>
-                                                        <tr>
+                                                        <tr class="chk_dual">
                                                             <td class="new_th">지역</td>
                                                             <td>
                                                                 <fieldset class="box_chk-group" role="group" aria-labelledby="regionLegend">
@@ -312,7 +312,7 @@
                                                                 <span class="box_ipt">
                                                                     <label for="srchKeyword" class="sr-only">운영대학 검색</label>
                                                                     <input type="text" class="input_txt" id="srchKeyword" name="srchKeyword" value="" placeholder="운영대학" title="키워드 입력">
-                                                                    <button type="reset" class="ico16_delete"><span class="blind">삭제</span></button>
+                                                                    <button type="button" class="ico16_delete"><span class="blind">삭제</span></button>
                                                                 </span>
                                                             </td>
                                                         </tr>
